force-app/main/default/objects/Data_Sync__b/Data_Sync__b.object-meta.xml
<CustomObject>
    <label>Data Sync</label>
    <pluralLabel>Data Syncs</pluralLabel>
</CustomObject>