force-app/main/default/objects/Data_Sync__b/fields/API_Response__c.field-meta.xml
<CustomField>
    <fullName>API_Response__c</fullName>
    <label>API Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>