force-app/main/default/objects/Data_Sync__b/fields/Data_Sync_Name__c.field-meta.xml
<CustomField>
    <fullName>Data_Sync_Name__c</fullName>
    <label>Data Sync Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>