force-app/main/default/objects/Data_Sync__b/fields/Sync_Direction__c.field-meta.xml
<CustomField>
    <fullName>Sync_Direction__c</fullName>
    <label>Sync Direction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>